Clase/main.tf
terraform {
  required_providers {
    aws={
        source = "hashicorp/aws"
        version = "6.21.0"
    }
  }
}

provider "aws" {
  region = var.region2
}


resource "aws_security_group" "ssh" {
    name = "ssh-demo-lamp"
    description = "Allow SSH traffic"
}

resource "aws_vpc_security_group_ingress_rule" "ssh_ingress" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.ssh.id
}

resource "aws_security_group" "http" {
    name = "http-demo-lamp"
    description = "Allow Http traffic"
}

resource "aws_vpc_security_group_ingress_rule" "http_ingress" {
  from_port         = 80
  to_port           = 80
  ip_protocol = "TCP"
  cidr_ipv4 = "0.0.0.0/0"
  security_group_id = aws_security_group.http.id
}

resource "aws_security_group" "all" {
    name = "all-demo-lamp"
    description = "Allow All Egress traffic"
}

resource "aws_vpc_security_group_egress_rule" "all_egress" {
  security_group_id   = aws_security_group.all.id
  ip_protocol          = "-1"
  cidr_ipv4 = "0.0.0.0/0"
}

resource "aws_instance" "web_server" {
  instance_type = var.instance_type
  key_name = var.key_name
  ami = data.aws_ami.ubuntu.id
  vpc_security_group_ids = [
    aws_security_group.all.id,
    aws_security_group.http.id,
    aws_security_group.ssh.id,
  ]
  user_data = file("install_tomcat.sh")
  user_data_replace_on_change = true
  tags = {
    Name  = "Web_server_Rute53"
  }
}

resource "aws_instance" "bastion" {
  instance_type = var.instance_type
  key_name = var.key_name
  ami = data.aws_ami.ubuntu.id
  vpc_security_group_ids = [
    aws_security_group.ssh.id,
    aws_security_group.all.id,
  ]
  tags = {
    Name = "bastion"
  }
}

resource "aws_route53_zone" "default" {
  name = var.domain

  vpc {
    vpc_id     = data.aws_vpc.default_vpc.id
    vpc_region = var.region2
  }
}

resource "aws_route53_record" "web_server" {
  zone_id = aws_route53_zone.default.id
  name    = var.domain
  type    = "A"
  ttl     = 3600
  records = [aws_instance.web_server.private_ip]
}

resource "aws_route53_record" "web_server_alias" {
  zone_id = aws_route53_zone.default.id
  name    = "www.${var.domain}"
  type    = "A"
  ttl     = 3600
  records = [aws_instance.web_server.private_ip]
}

resource "aws_route53_record" "bastion" {
  type = "A"
  name = "bastion.${var.domain}"
  zone_id = aws_route53_zone.default.id
  ttl = 3600
  records = [ aws_instance.bastion.private_ip]
}
